# strange_shapes

./: Cargo.toml
.github/workflows/: release.yaml
art/: player.blend  ship.blend  ship.blend1
assets/models/: ship.glb
src/: asset_tracking.rs  audio.rs  lib.rs  main.rs
src/demo/: animation.rs  player.rs
src/game/: animation.rs  camera.rs  level.rs  mod.rs  player.rs  ship.rs
src/screens/: credits.rs  gameplay.rs  loading.rs  mod.rs  playing.rs  title.rs
src/theme/: interaction.rs
web/: index.html
