[package]
name = "strange_shapes"
authors = ["basie <basie@eloquentgeek.games>"]
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", features = ["wayland"] }
rand = "0.8"
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
leafwing-input-manager = { git = "https://github.com/leafwing-studios/leafwing-input-manager" }
bevy_asset_loader = "0.21.0"

[features]
default = [
    "dev_native",
]
dev = [
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
]
dev_native = [
    "dev",
    "bevy/file_watcher",
    "bevy/embedded_watcher",
]


[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = "debuginfo"

[profile.release-native]
inherits = "release"
opt-level = 3
strip = "none"
